[package]
name = "loader"
version = "0.1.0"
edition = "2021"


[dependencies]
axstd = { path = "../../ulib/axstd" , features = ["alloc" , "irq" ], optional = true }
axconfig = { path = "../../modules/axconfig" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"